--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@kentcdodds/react-workshop-app": "^4.3.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
     "codegen.macro": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,13 +26,13 @@
     "vanilla-tilt": "^1.7.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.4",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "husky": "^4.3.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "react-scripts": "^4.0.3",
-    "typescript": "^4.2.4"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
